--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -131,7 +131,12 @@ def reactNativeArchitectures() {
 
 android {
     ndkVersion rootProject.ext.ndkVersion
-
+packagingOptions {
+    pickFirst 'lib/x86/libc++_shared.so'
+    pickFirst 'lib/x86_64/libc++_shared.so'
+    pickFirst 'lib/armeabi-v7a/libc++_shared.so'
+    pickFirst 'lib/arm64-v8a/libc++_shared.so'
+}
     compileSdkVersion rootProject.ext.compileSdkVersion
 
     defaultConfig {
