before pixel check

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "@rnmapbox/maps": "^10.0.11-rc.1",
     "react": "18.1.0",
-    
-    "react-native": "0.70.0"
+    "react-native": "0.70.0",
+    "react-native-svg": "^13.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
