--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/material-bottom-tabs": "^6.2.16",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
     "@rnmapbox/maps": "^10.0.11-rc.1",
     "react": "18.1.0",
     "react-native": "0.70.0",
-    "react-native-svg": "^13.10.0"
+    "react-native-paper": "^5.9.1",
+    "react-native-safe-area-context": "^4.7.1",
+    "react-native-screens": "^3.22.1",
+    "react-native-svg": "^13.10.0",
+    "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
